Fixed issue with vertical scrollbar in Firefox which doesn't seem to handle correctly 100% height divs

--- a/css/table.css
+++ b/css/table.css
@@ -64,7 +64,7 @@
 
 .ngc.columns.middle.scroll-wrapper {
     height: 100%;
-    display: table-cell;
+    display: inline-block;
     overflow-x:hidden;
     overflow-y:scroll;
 }
